add additional backgroung color to the root

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@
     --font-weight-bold: 700;
     /* Цвета */
     --color-background: #F0E6E5;
+    --color-additional-bg: #FFF6F5;
     --color-text: #332D27;
     --color-btn: #7E7E7E;
     --color-btn-hover: #ECECEC;
