--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@
 
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -72,6 +73,8 @@ body {
     background-color: var(--color-background);
     color: var(--color-text);
     font-family: var(--font-base);
+    font-size: 32px;
+    font-weight: var(--font-weight-regular);
     margin: 0;
     padding: 0;
 }
