--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ body {
     background-color: var(--color-background);
     color: var(--color-text);
     font-family: var(--font-base);
-    font-size: 32px;
+    font-size: 20px;
     font-weight: var(--font-weight-regular);
     margin: 0;
     padding: 0;
@@ -91,8 +91,6 @@ section {
     margin-bottom: 170px;
 }
 
-a
-
 button {
     font-family: var(--font-base);
     cursor: pointer;
@@ -108,6 +106,11 @@ button:hover {
     color: var(--color-btn);
 }
 
+h1, h2, h3, h4, h5 {
+    font-family: var(--font-heading);
+    font-weight: var(--font-weight-bold);
+    font-size: clamp(24px, 2.6vw, 50px);
+}
 
 
 
