--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,5 +1,6 @@
 .contentWrapper {
     display: flex;
+    gap: 40px;
 }
 
 
@@ -17,10 +18,6 @@
     list-style-type: disc;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    justify-content: space-around;
 }
 
-.benefitsList li {
-    font-size: 20px;
-
-}
