--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,9 @@ h1, h2, h3, h4, h5 {
     font-size: clamp(24px, 2.6vw, 50px);
 }
 
+h2, h3, h4, h5 {
+    margin-bottom: 90px;
+}
 
 /* Медиазапрос для экранов с шириной больше 1200px */
 @media (min-width: 1200px) {
@@ -133,6 +136,12 @@ h1, h2, h3, h4, h5 {
 @media (max-width: 767px) {
     .container {
         padding: 0 15px;   
+    }
+    section {
+        margin-bottom: 90px;
+    }
+    h2, h3, h4, h5 {
+        margin-bottom: 40px;
     }
 }
 
