--- a/src/components/WhyChoose/WhyChoose.module.css
+++ b/src/components/WhyChoose/WhyChoose.module.css
@@ -1,6 +1,7 @@
 .cardsWrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 18px;
     width: 100%;
 }
@@ -8,9 +9,71 @@
 .card {
     background-color: var(--color-additional-bg);
     border-radius: 20px;
+    border: 1px solid var(--color-black);
     padding: 30px 20px;
+}
+
+.cardText {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .whyChooseTitle {
     font-size: clamp(24px,2.08vw, 40px);
+    margin-bottom: 15px;
+}
+
+
+.whyChooseImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.logoWrapper {
+    width: 100px;
+    height: 100px;
+    padding: 30px;
+    border: 1px solid var(--color-black);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    margin-bottom: 80px;
+}
+
+.logo {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+@media (max-width: 1024px) {
+    .cardsWrapper {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+    .card,
+    .imageCard {
+        max-height: 350px;
+    }
+    .whyChooseImg {
+        object-position: top;
+    }
+    .logoWrapper {
+        width: 70px;
+        height: 70px;
+        padding: 15px;
+        margin-bottom: 60px;
+    }
+}
+
+@media(max-width: 767px) {
+    .cardsWrapper {
+        display: flex;
+        flex-direction: column;
+    }
 }
