--- a/src/components/WhyChoose/WhyChoose.module.css
+++ b/src/components/WhyChoose/WhyChoose.module.css
@@ -76,4 +76,16 @@
         display: flex;
         flex-direction: column;
     }
+    .card,
+    .imageCard {
+        max-height: 400px;
+    }
+    .imageCard {
+        overflow: hidden;
+        border-radius: 20px;
+    }
+    .whyChooseImg {
+        max-height: 400px;
+    }
+
 }
