--- a/src/components/WhyChoose/WhyChoose.module.css
+++ b/src/components/WhyChoose/WhyChoose.module.css
@@ -80,6 +80,9 @@
     .imageCard {
         max-height: 400px;
     }
+    .logoWrapper {
+        margin-bottom: 30px;
+    }
     .imageCard {
         overflow: hidden;
         border-radius: 20px;
