--- a/src/components/Sterilization/Sterilization.module.css
+++ b/src/components/Sterilization/Sterilization.module.css
@@ -95,6 +95,10 @@
   .sterilizationTitle {
     margin-bottom: 30px;
   }
+
+  .cards {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (max-width: 480px) {
