--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,8 @@ body {
     box-sizing: border-box;
 }
 
+
+header,
 section {
     margin-bottom: 170px;
 }
@@ -139,6 +141,7 @@ h2, h3, h4, h5 {
     .container {
         padding: 0 15px;   
     }
+    header,
     section {
         margin-bottom: 90px;
     }
