--- a/src/components/WhyChoose/WhyChoose.module.css
+++ b/src/components/WhyChoose/WhyChoose.module.css
@@ -81,6 +81,8 @@
         max-height: 400px;
     }
     .logoWrapper {
+        width: 50px;
+        height: 50px;
         margin-bottom: 30px;
     }
     .imageCard {
