--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -76,8 +76,18 @@
     align-items: center;
   }
 
+  .adressBlock {
+    flex: 1 1 auto;
+    gap: 33px;
+  }
+
+  .adress,
+  .socials {
+    gap: 25px;
+  }
+
   .contactsMap {
-    flex: 1 1 420px;
+    width: 100%;
   }
 }
 
@@ -88,5 +98,11 @@
 
   .adressBlock {
     flex: 1 1 auto;
+    gap: 23px;
+  }
+
+  .adress,
+  .socials {
+    gap: 16px;
   }
 }
