--- a/src/components/Sterilization/Sterilization.module.css
+++ b/src/components/Sterilization/Sterilization.module.css
@@ -61,6 +61,10 @@
   margin-left: -16px;
 }
 
+.cardIcon_icon {
+  margin-left: -9px;
+}
+
 .cardDescription span {
   font-weight: var(--font-weight-medium);
 }
@@ -75,6 +79,13 @@
 @media (max-width: 1100px) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .cardIcon,
+  .cardIcon_icon {
+    width: 70px;
+    height: 70px;
+    margin-left: -10px;
   }
 }
 
@@ -99,10 +110,21 @@
   .cards {
     grid-template-columns: 1fr;
   }
+
+  .cardIcon,
+  .cardIcon_icon {
+    width: 50px;
+    height: 50px;
+    margin-left: -9px;
+  }
 }
 
 @media (max-width: 480px) {
   .cards {
     grid-template-columns: 1fr;
+  }
+
+  .cardIcon_icon {
+    margin-left: -5px;
   }
 }
