--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,19 +7,20 @@
     padding: 20px 0;
 }
 
-.container {
+.footerContainer {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .logo {
     height: 80px;
     width: 215px;
     object-fit: contain;
-    align-self: center;
 }
 
 .nav {
