--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,7 +18,8 @@
     flex-wrap: wrap;
     align-items: center;
     position: absolute;
-    z-index: 2;
+    z-index: 10;
+    pointer-events: auto;
 }
 
 .logo img {
@@ -41,6 +42,10 @@
     font-weight: 400;
     font-size: 15px;
     font-family: Roboto;
+}
+
+.nav li {
+    cursor: pointer;
 }
 
 .logo,
@@ -145,6 +150,10 @@
     display: none;
 }
 
+.mobileNav {
+    display: none;
+}
+
 @media (max-width: 1300px) {
     .headerMainNav {
         position: unset;
@@ -196,25 +205,44 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
+        padding: 5px;
+        background: var(--color-btn);
+        border-radius: 5px;
         cursor: pointer;
-        position: absolute;
+        position: fixed;
         right: 20px;
-        top: 20px;
+        top: 40px;
         z-index: 10;
+        /* transition: all 0.3s ease; */
     }
 
     .burgerLine {
-        width: 30px;
-        height: 3px;
-        border-radius: 3px;
-        background-color: var(--color-black);
-        transition: 0.3s ease;
+        position: absolute;
+        left: 5px;
+        width: 20px;
+        height: 2px;
+        border-radius: 2px;
+        background-color: var(--color-white);
+        /* transition: transform 0.3s ease, opacity 0.3s ease, top 0.3s ease; */
+    }
+
+    .burgerLine:nth-child(1) {
+        top: 6px;
+    }
+
+    .burgerLine:nth-child(2) {
+        top: 14px;
+    }
+
+    .burgerLine:nth-child(3) {
+        top: 22px;
     }
 
     .burgerMenu.open .burgerLine:nth-child(1) {
-        transform: rotate(45deg) translate(5px, 5px);
+        transform: rotate(45deg);
+        top: 14px;
     }
 
     .burgerMenu.open .burgerLine:nth-child(2) {
@@ -222,7 +250,19 @@
     }
 
     .burgerMenu.open .burgerLine:nth-child(3) {
-        transform: rotate(-45deg) translate(6px, -6px);
+        transform: rotate(-45deg);
+        top: 14px;
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.4);
+        z-index: 9;
+        transition: opacity 0.3s ease;
     }
 
     .mobileNav {
