--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -154,6 +154,10 @@
     display: none;
 }
 
+.hiddenTitle {
+    display: none;
+}
+
 @media (max-width: 1300px) {
     .headerMainNav {
         position: unset;
@@ -212,7 +216,7 @@
         border-radius: 5px;
         cursor: pointer;
         position: fixed;
-        right: 20px;
+        right: 15px;
         top: 40px;
         z-index: 10;
         /* transition: all 0.3s ease; */
@@ -269,14 +273,15 @@
         display: none;
         flex-direction: column;
         align-items:start;
-        position: absolute;
-        top: 60px;
-        right: 0;
+        position: fixed;
+        top: 80px;
+        right: 15px;
         width: 40%;
-        background-color: var(--color-white);
+        background-color: var(--color-additional-bg);
         padding: 20px;
         border-radius: 5px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+        z-index: 10;
     }
 
     .mobileNav ul {
