--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -46,7 +46,7 @@
     transition: transform 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
-.nav a:hover {
+.nav li:hover {
     transform: scale(1.1);
 }
 
@@ -99,7 +99,7 @@
     padding-bottom: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     z-index: 3;
 }
 
@@ -200,7 +200,8 @@
 }
 
 .disclaimer {
-    font-size: 14px;
+    font-size: 10px;
+    color: var(--color-btn);
 }
 
 @media (max-width: 1300px) {
@@ -221,6 +222,7 @@
         font-size: 30px;
         padding-top: 0px;
         margin-bottom: 60px;
+        margin-top: 20px;
     }
 
     .headerMainLeft p {
@@ -230,11 +232,25 @@
 
     .button {
         max-width: 100%;
-        margin-top: 10px;
+        /* margin-top: 10px; */
+    }
+}
+
+@media (max-width: 1120px) {
+    .headerMainLeft {
+        padding-top: 20px;
+        padding-right: 20px;
+    }
+    .benefitsList {
+        margin-bottom: 20px;
     }
 }
 
 @media (max-width: 768px) {
+    .button {
+        padding: 20px 24px;
+        height: unset;
+    }
     .nav {
         display: none;
     }
