--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -62,6 +62,10 @@
     position: relative;
 }
 
+.scrollUp:hover {
+    background: var(--color-btn);
+}
+
 .scrollUp img {
     width: 10px;
     height: 10px;
@@ -104,7 +108,7 @@
         align-items: flex-start;
         gap: 10px;
         margin: 0px 40px;
-       }
+    }
 
     .scrollUp {
         display: none;
