--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -58,7 +58,8 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    font-size: 25px;
+    /* font-size: 25px; */
+    font-size: clamp(18px, 1.66vw, 32px);
     line-height: 1.5;
     display: flex;
     flex-direction: column;
@@ -244,6 +245,9 @@
     .benefitsList {
         margin-bottom: 20px;
     }
+    .button {
+        height: 80px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -394,5 +398,8 @@
         width: 100%;
         padding-right: 0;
         padding-top: 40px;
+    }
+    .button {
+        width: 100%;
     }
 }
