change hover color arrow buttons

--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -29,7 +29,7 @@
 
 .arrowLeftBtn:hover,
 .arrowRightBtn:hover {
-    background-color: var(--color-black);
+    background-color: var(--color-btn);
     transform: scale(1.1);
 }
 
