--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -31,7 +31,7 @@
 .nav ul {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 50px;
     padding: 0;
     margin: 0;
     align-items: center;
@@ -42,11 +42,15 @@
     color: white;
     font-size: 14px;
     font-weight: 400;
-    transition: 0.3s;
 }
 
-.nav a:hover {
-    opacity: 0.8;
+.nav li {
+    transition: transform 0.2s ease-in-out;
+}
+
+.nav li:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .scrollUp {
@@ -60,10 +64,13 @@
     cursor: pointer;
     border: none;
     position: relative;
+    transition: transform 0.3s ease-in-out;
 }
 
+
 .scrollUp:hover {
-    background: var(--color-btn);
+    transform: scale(1.1);
+    background-color: var(--color-white);
 }
 
 .scrollUp img {
@@ -75,6 +82,9 @@
     .nav a {
         font-size: 12px;
         font-weight: 300;
+    }
+    .nav ul {
+        gap: 20px;
     }
 }
 
