--- a/src/components/Sterilization/Sterilization.module.css
+++ b/src/components/Sterilization/Sterilization.module.css
@@ -117,6 +117,9 @@
     height: 50px;
     margin-left: -9px;
   }
+  .cardDescription {
+  line-height: 1.3;
+  }
 }
 
 @media (max-width: 480px) {
