--- a/src/components/WhyChoose/WhyChoose.module.css
+++ b/src/components/WhyChoose/WhyChoose.module.css
@@ -24,7 +24,6 @@
     margin-bottom: 15px;
 }
 
-
 .whyChooseImg {
     width: 100%;
     height: 100%;
@@ -92,7 +91,9 @@
     .whyChooseImg {
         max-height: 400px;
     }
-
+    .cardText p {
+        line-height: 1.3;
+    }
 }
 
 @media (max-width: 480px) {
